# hamster-parkhouse

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Function_Car_arrival.c  Function_Check_Queue.c  Function_Input_Parameters.c  Function_Time_Step.c  Function_statistics.c  README.md  Simulation_Loop.c  io.md  run.sh  setup.sh  testing.txt
.devcontainer/: Dockerfile  devcontainer.json
doc/: Documentation.md  Statistics-Overview.md  cli.md  explanation.md  io.md  output_test.c  simulation.md  statistics_overview.md  test
include/: car_lib.h  cli.h  cli_lib.h  config.h  config_lib.h  data_types.h  file_manager_lib.h  init_lib.h  queue_lib.h  sim_lib.h  statistics_output_lib.h
lib/: Base_lib.h  car_lib.c  car_lib.h  data_types.h  file_manager_lib.c  file_manager_lib.h  queue_lib.c  queue_lib.h  sim_lib.h  statistics_output_lib.c
src/: Simulation_Loop.c  data_types.c  main.c  statistics_output_lib.c  statistics_output_lib.h  statistics_test.c  test.c
src/car/: car_lib.c
src/cli/: cli.c  cli.h  cli_lib.c
src/config/: config.c  config.h  config_lib.c
src/file_manager/: file_manager_lib.c
src/init/: init_lib.c
src/queue/: queue_lib.c  queue_lib.h
src/sim/: sim_lib.c
src/statistics_gui/: statistics_output_lib.h
src/statistics_output/: statistics_output_lib.c
src/types/: data_types.h
test/: car_test.c  cli_test.c  config_test.c  file_manager_test.c  gui_test.c  init_test.c  queue_test.c  sim_test.c
